fixed footer links and spacing as well as search bar

--- a/main.css
+++ b/main.css
@@ -26,8 +26,14 @@ li {
 .grey-text{
 	color: #bfbfbf;
 }
+.font-10px{
+	font-size: 10px;
+}
 .font-12px{
 	font-size:12px;
+}
+.font-14px {
+	font-size: 14px;
 }
 .black-background{
 	background-color: black;
@@ -143,4 +149,10 @@ li {
 }
 .radius-0{
 	border-radius: 0px;
+}
+footer{
+	background-color: black;
+}
+.line-space{
+	padding: 10px;
 }
